--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -37,4 +37,6 @@ file {\bfseries rollnodetails.\-h}
 file {\bfseries roomdetails.\-cc}
 \item 
 file {\bfseries roomdetails.\-h}
+\item 
+file {\bfseries totalclasses-\/main.\-cpp}
 \end{DoxyCompactItemize}
